--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
       property="og:description"
       content="Nina Carducci, photographe spécialisée dans les portraits, événements, et albums photo à Bordeaux et en Île-de-France."
     />
-    <meta property="og:image" content="https://" />
-    <meta property="og:url" content="https://" />
+    <meta
+      property="og:image"
+      content="https://control222.github.io/Openclassroom-NinaCarducci/assets/images/nina-500.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://control222.github.io/Openclassroom-NinaCarducci/"
+    />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
 
@@ -43,7 +49,10 @@
       name="twitter:description"
       content="Photographe à Bordeaux et en Île-de-France, spécialisée dans portraits, mariages, et entreprises."
     />
-    <meta name="twitter:image" content="https://" />
+    <meta
+      name="twitter:image"
+      content="https://control222.github.io/Openclassroom-NinaCarducci/assets/images/nina-500.webp"
+    />
     <meta name="twitter:site" content="@YourTwitterHandle" />
 
     <script type="application/ld+json">
@@ -51,9 +60,9 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Nina Carducci Photographe",
-        "image": "",
-        "@id": "",
-        "url": "",
+        "image": "https://control222.github.io/Openclassroom-NinaCarducci/assets/images/nina-500.webp",
+        "@id": "https://control222.github.io/Openclassroom-NinaCarducci/",
+        "url": "https://control222.github.io/Openclassroom-NinaCarducci/",
         "telephone": "05 56 67 78 89",
         "address": {
           "@type": "PostalAddress",
