image nina changed for facebook

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     />
     <meta
       property="og:image"
-      content="https://control222.github.io/Openclassroom-NinaCarducci/assets/images/nina-500.webp"
+      content="https://control222.github.io/Openclassroom-NinaCarducci/assets/images/nina-meta.png"
     />
     <meta
       property="og:url"
@@ -38,9 +38,14 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="fr_FR" />
+    <meta property="og:author" content="Nina Carducci" />
 
     <!-- Twitter  -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://control222.github.io/Openclassroom-NinaCarducci/"
+    />
     <meta
       name="twitter:title"
       content="Nina Carducci, photographe professionnelle à Bordeaux"
@@ -51,7 +56,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://control222.github.io/Openclassroom-NinaCarducci/assets/images/nina-500.webp"
+      content="https://control222.github.io/Openclassroom-NinaCarducci/assets/images/nina-meta.png"
     />
     <meta name="twitter:site" content="@YourTwitterHandle" />
 
@@ -60,7 +65,7 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Nina Carducci Photographe",
-        "image": "https://control222.github.io/Openclassroom-NinaCarducci/assets/images/nina-500.webp",
+        "image": "https://control222.github.io/Openclassroom-NinaCarducci/assets/images/nina-meta.png",
         "@id": "https://control222.github.io/Openclassroom-NinaCarducci/",
         "url": "https://control222.github.io/Openclassroom-NinaCarducci/",
         "telephone": "05 56 67 78 89",
