pictures source sizes

--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
                   ./assets/images/slider/ryoji-iwata-1920.webp 1920w
                 "
                 type="image/webp"
+                sizes="(max-width: 480px) 480px,
+                (max-width: 768px) 768px,
+                (max-width: 1024px) 1024px,
+                (max-width: 1200px) 1200px,
+                1920px"
               />
               <img
                 src="./assets/images/slider/ryoji-iwata-1200.jpg"
@@ -181,6 +186,11 @@
                   ./assets/images/slider/edward-cisneros-1920.webp 1920w
                 "
                 type="image/webp"
+                sizes="(max-width: 480px) 480px,
+                (max-width: 768px) 768px,
+                (max-width: 1024px) 1024px,
+                (max-width: 1200px) 1200px,
+                1920px"
               />
               <img
                 src="./assets/images/slider/edward-cisneros-1200.jpg"
@@ -204,6 +214,11 @@
                   ./assets/images/slider/nicholas-green-1920.webp 1920w
                 "
                 type="image/webp"
+                sizes="(max-width: 480px) 480px,
+                (max-width: 768px) 768px,
+                (max-width: 1024px) 1024px,
+                (max-width: 1200px) 1200px,
+                1920px"
               />
               <img
                 src="./assets/images/slider/nicholas-green-1200.jpg"
