--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       name="twitter:image"
       content="https://control222.github.io/Openclassroom-NinaCarducci/assets/images/nina-meta.png"
     />
-    <meta name="twitter:site" content="@YourTwitterHandle" />
+    <meta name="twitter:site" content="@nina Carducci" />
 
     <script type="application/ld+json">
       {
