--- a/index.html
+++ b/index.html
@@ -9,23 +9,24 @@
       content="Nina Carducci, photographe à Bordeaux et en Île-de-France, spécialisée dans les portraits, événements, retouches et albums photo"
     />
 
-    <link rel="preload" href="./assets/bootstrap/bootstrap.css" as="style" />
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" />
+    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
 
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/style.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
     <link
       rel="preload"
       href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
       as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
     />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-    />
+    <noscript>
+      <link
+        rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
+      />
+    </noscript>
 
     <meta charset="UTF-8" />
 
@@ -509,8 +510,8 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-    <script src="./assets/scripts.js" defer></script>
-    <script src="./assets/maugallery.js" defer></script>
+    <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
+    <script src="./assets/scripts.min.js" defer></script>
+    <script src="./assets/maugallery.min.js" defer></script>
   </body>
 </html>
