--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
       content="Nina Carducci, photographe à Bordeaux et en Île-de-France, spécialisée dans les portraits, événements, retouches et albums photo"
     />
 
-    <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./assets/style.min.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -510,7 +514,11 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <script src="./assets/scripts.min.js" defer></script>
     <script src="./assets/maugallery.min.js" defer></script>
   </body>
