--- a/index.html
+++ b/index.html
@@ -25,14 +25,6 @@
       as="style"
       onload="this.onload=null;this.rel='stylesheet'"
     />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
-      />
-    </noscript>
-
-    <meta charset="UTF-8" />
 
     <!-- Open Graph  -->
     <meta
@@ -123,7 +115,7 @@
               ><img
                 src="assets/images/instagram.png"
                 alt="Logo instagram"
-                title="Logo instagram"
+                title="Logo du site instagram"
                 width="40"
                 height="40"
                 loading="lazy"
@@ -238,7 +230,7 @@
               <img
                 src="./assets/images/slider/nicholas-green-1200.jpg"
                 class="d-block w-100"
-                alt="Groupe de personnes à un concert"
+                alt="Personnes à un concert"
                 title="Groupe de personnes à un concert"
                 width="1200"
                 height="555"
@@ -275,7 +267,7 @@
             <img
               src="./assets/images/nina-500.jpg"
               alt="Photo portrait de Nina"
-              title="Photo portrait de Nina"
+              title="Photo de Nina"
               width="500"
               height="499"
             />
