--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Nina Carducci, photographe professionnelle à Bordeaux</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta
       name="description"
-      content="Nina Carducci, photographe à Bordeaux et en Île-de-France, spécialisée dans les portraits, événements, retouches et albums photo"
+      content="Nina Carducci, photographe professionnelle à Bordeaux et en Île-de-France. Spécialisée dans les portraits, mariages, événements, retouches, et albums photo, pour particuliers et entreprises."
     />
 
     <link
