--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </nav>
     </header>
 
-    <div id="header">
+    <section id="header">
       <div
         id="carouselExampleIndicators"
         class="carousel slide"
@@ -258,9 +258,9 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-    </div>
+    </section>
     <main>
-      <div id="about">
+      <section id="about">
         <div class="picture left">
           <picture>
             <source srcset="./assets/images/nina-500.webp" type="image/webp" />
@@ -293,8 +293,8 @@
             yeux sur vos photos.
           </p>
         </div>
-      </div>
-      <div id="gallery">
+      </section>
+      <section id="gallery">
         <h2 class="title">Portfolio</h2>
         <div class="container py-3">
           <div class="gallery" style="display: none">
@@ -404,8 +404,8 @@
             <figcaption class="quote__author">- Richard Avedon</figcaption>
           </figure>
         </div>
-      </div>
-      <div id="services">
+      </section>
+      <section id="services">
         <h2 class="title">Mes services</h2>
         <div class="container">
           <div class="service">
@@ -450,8 +450,8 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="quote">
+      </section>
+      <section class="quote">
         <figure>
           <blockquote>
             <h2 class="quote__text">
@@ -462,8 +462,8 @@
           </blockquote>
           <figcaption class="quote__author">- Richard Avedon</figcaption>
         </figure>
-      </div>
-      <div id="contact">
+      </section>
+      <section id="contact">
         <div class="container">
           <div class="form-container">
             <h3>Une question ? Une demande de devis ?</h3>
@@ -498,8 +498,23 @@
             />
           </div>
         </div>
-      </div>
+      </section>
     </main>
+
+    <footer>
+      <div class="footer_left">
+        <ul>
+          <li>Nina Carducci</li>
+          <li>Photographe professionnelle</li>
+          <li>68 avenue Alsace-Lorraine, 33200 Bordeaux</li>
+          <li>05 56 67 78 89</li>
+          <li>Du lundi au vendredi de 10 h à 19 h</li>
+        </ul>
+      </div>
+      <div class="footer_right">
+        <p>© 2024 Nina Carducci</p>
+      </div>
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
