--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <div class="carousel-item active">
             <picture>
               <source
-                srcset="
+                data-srcset="
                   ./assets/images/slider/ryoji-iwata-480.webp   480w,
                   ./assets/images/slider/ryoji-iwata-768.webp   768w,
                   ./assets/images/slider/ryoji-iwata-1024.webp 1024w,
@@ -172,6 +172,7 @@
                 (max-width: 1200px) 1200px,
                 1920px"
               />
+
               <img
                 src="./assets/images/slider/ryoji-iwata-1200.jpg"
                 class="d-block w-100"
@@ -179,13 +180,14 @@
                 title="Homme en costard marchant sur un large passage piéton"
                 width="1200"
                 height="555"
+                loading="lazy"
               />
             </picture>
           </div>
           <div class="carousel-item">
             <picture>
               <source
-                srcset="
+                data-srcset="
                   ./assets/images/slider/edward-cisneros-480.webp   480w,
                   ./assets/images/slider/edward-cisneros-768.webp   768w,
                   ./assets/images/slider/edward-cisneros-1024.webp 1024w,
@@ -213,7 +215,7 @@
           <div class="carousel-item">
             <picture>
               <source
-                srcset="
+                data-srcset="
                   ./assets/images/slider/nicholas-green-480.webp   480w,
                   ./assets/images/slider/nicholas-green-768.webp   768w,
                   ./assets/images/slider/nicholas-green-1024.webp 1024w,
@@ -531,5 +533,6 @@
     ></script>
     <script src="./assets/scripts.min.js" defer></script>
     <script src="./assets/maugallery.min.js" defer></script>
+    <script src="./assets/index.min.js"></script>
   </body>
 </html>
